# Giant-Parallel-Sudoku-Solver

./: CMakeLists.txt  README.md
inc/: CMakeLists.txt
src/: CMakeLists.txt  Grid.cpp  main.cpp  solver.cpp
